Bugs fixes